--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Our Lovely Wednesday Evening</title>
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <h1> Pizza | Pop | Programming </h1>
@@ -11,7 +12,7 @@
       </div>
   
     <h2> THE BEST PIZZA </H2>
-    <p> Go <a> href="here!"</a> </p> 
+    <p> Go <a href="">here!</a>, </p> 
     <ol> 
       <li> Pepperoni </li>
       <li> Pepperoni
