--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
   
     <h2> THE BEST PIZZA </H2>
-    <p> Go <a href="">here!</a>, </p> 
+    <p> Go <a href="">here!</a> </p> 
     <ol> 
       <li> Pepperoni </li>
       <li> Pepperoni
