--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p> Go <a href="">here!</a> </p> 
     <ol> 
       <li> Pepperoni </li>
-      <li> Pepperoni
+      <li> Pepperoni <li>
       <li> Pepperoni </li>
     
     <h3> PIZZA IS FANTASTIC </h3>
